spelling error on about page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p class="text-center">Social Media Marketing, SEO, and your overall online presences is VITAL to your success and growth in increasing profit margins and your client base. We understand digital marketing and how to reach the right demographic!</p>
             <br>
             • Targeted Facebook Advertising so we show your adds to the right people!<br>
-            • SEO (This is what tells google you are what people are looking for and increase your ranking on searchs.) <br>
+            • SEO (This is what tells google you are what people are looking for and increases your ranking on searchs.) <br>
             • Web Development & Responsive Design!<br>
             • Professional Photography to give your companies pictures the most impact on viewers!<br>
         </h4>
