--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
           <h3>We are proud to provide you with the marketing and operations needed to help your business get to the next level.</h3>
         </div>
       </div>
-      <div class="facebookAd">
+      <div class="facebookAd col-lg-12">
         <div class="col-lg-4 service text-center">
           <p class="FB L1">Facebook Ads Level 1 <br> $250/month + your advertising budget.</p>
           <p class="FB-content text-left">
@@ -92,6 +92,41 @@
             • Landing Page designed for a specific promotion. <br><br>
             • Lead generation landing page.
           </p>
+        </div>
+        <div class="webdevLevels col-lg-12">
+          <div class="service col-lg-4 text-center">
+            <p class="webdev L1"> Web Development Basic <br>/$750</p>
+            <p class="webdev-content text-left">
+              • 3 Web pages being...<br><br>
+              • Customize designed home page with text, pictures and videos of your choosing. <br><br>
+              • Customize designed information page to display any content of your choosing. <br><br>
+              • Contact page with email, name and message submission.<br><br>
+              • Responsive and Mobile Friendly.
+            </p>
+          </div>
+          <div class="service col-lg-4 text-center">
+            <p class="webdev L2"> Web Development Plus <br>/$1,000</p>
+            <p class="webdev-content text-left">
+              • 5 Web pages being... <br><br>
+              • Customize designed home page with text, pictures and videos of your choosing. <br><br>
+              • Three Customize designed information page to display any content of your choosing. <br><br>
+              • Contact page with email, name and message submission.<br><br>
+              • Responsive and Mobile Friendly.
+            </p>
+          </div>
+          <div class="service col-lg-4 text-center">
+            <p class="webdev L3"> Web Development Customized Premium <br>/Price is based on the extent of your website</p>
+            <p class="webdev-content text-left">
+              • 5+ Web pages being...<br><br>
+              • Customize designed home page with text, pictures and videos of your choosing. <br><br>
+              • Three Customize designed information page to display any content of your choosing. <br><br>
+              • Contact page with email, name and message submission.<br><br>
+              • Responsive and Mobile Friendly. <br><br>
+              • Online Purchase Buttons. <br><br>
+              • Shopping Cart.
+              • 
+            </p>
+          </div>
         </div>
       </div>
       
