--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
     </div> <!-- /container -->
 
     <footer class="footer-contact">
-      <p>&copy; 2016 Jonathan Schupak.</p>
+      <p>&copy; LevelUpMarketing 2018</p>
     </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
