--- a/partners.html
+++ b/partners.html
@@ -72,9 +72,14 @@
           <!-- <div class="col-sm-4 col-sm-offset-2 text-center prime"> <img src="static/images/primeLogo.jpeg"> </div> -->
         <div class="col-lg-10 text-center komartialarts"> <img class="col-lg-12 col-lg-offset-1 text-center" src="static/images/KOMAA-Banner.png"> 
       </div>
+     </div>
     </div>
-    </div>
-    
+    <div class="container">
+    </div> <!-- /container -->
+
+    <footer class="footer-contact">
+      <p>&copy; LevelUpMarketing 2018</p>
+    </footer>
     <!--End of outside-wrapper  -->
 
 
