--- a/services.html
+++ b/services.html
@@ -132,6 +132,12 @@
       
 
     </div>
+    <div class="container">
+    </div> <!-- /container -->
+
+    <footer class="footer-contact">
+      <p>&copy; LevelUpMarketing 2018</p>
+    </footer>
     
     <!--End of outside-wrapper  -->
 
