spelling and grammer changes

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         <h4 class="col-sm-12 list text-left">
           <p class="text-center">Social Media Marketing, SEO, and your overall online presences is VITAL to your success and growth in increasing profit margins and your client base. We understand digital marketing and how to reach the right demographic!</p>
             <br>
-            • Targeted Facebook Advertising so we show your adds to the right people!<br>
-            • SEO (This is what tells google you are what people are looking for and increases your ranking on searchs.) <br>
+            • Targeted Facebook Advertising so we show your ads to the right people!<br>
+            • SEO (This is what tells Google your webpage is what people are looking for and increases your ranking on searchs.) <br>
             • Web Development & Responsive Design!<br>
             • Professional Photography to give your companies pictures the most impact on viewers!<br>
         </h4>
