--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             • Targeted Facebook Advertising so we show your ads to the right people!<br>
             • SEO (This is what tells Google your webpage is what people are looking for and increases your ranking on searchs.) <br>
             • Web Development & Responsive Design!<br>
-            • Professional Photography to give your companies pictures the most impact on viewers!<br>
+            • Professional Photography to give your companies pictures the most impact as possible!<br>
         </h4>
         <br>
         <medium class="col-sm-9">
