services SEO, Photography

--- a/services.html
+++ b/services.html
@@ -93,6 +93,23 @@
             • Lead generation landing page.
           </p>
         </div>
+        <!-- <div class="seoLevels col-lg-12">
+          <div class="service col-lg-4 text-center">
+            <p class="seo L1"> SEO Local <br> $300/month</p>
+            <p class="seo-content">
+              • Google Business Page<br><br>
+              • 3 Web pages being...<br><br>
+            </p>
+          </div>
+          <div class="service col-lg-4 text-center">
+            <p class="seo L2"> SEO Plus <br> $550/month</p>
+            <p class="seo-content"></p>
+          </div>
+          <div class="service col-lg-4 text-center">
+            <p class="seo L3"> SEO National <br> $1000/month</p>
+            <p class="seo-content"></p>
+          </div>
+        </div> -->
         <div class="webdevLevels col-lg-12">
           <div class="service col-lg-4 text-center">
             <p class="webdev L1"> Web Development Basic <br>/$750</p>
@@ -122,10 +139,22 @@
               • Three Customize designed information page to display any content of your choosing. <br><br>
               • Contact page with email, name and message submission.<br><br>
               • Responsive and Mobile Friendly. <br><br>
-              • Online Purchase Buttons. <br><br>
-              • Shopping Cart.
-            
+              • E-commerce. <br><br>
+              • And More!
             </p>
+          </div>
+        </div>
+        <div class="photography col-lg-12">
+          <p class="col-lg-12 photo-title text-center">Specialized Photography</p>
+          <div class="photographyList col-lg-6 text-center">
+            • Branding shots. <br><br>
+            • Product shots. <br><br>
+            • Headshots.
+          </div>
+          <div class="photographyList col-lg-6 text-center">
+            • Scenary shots. <br><br>
+            • Business shots. <br><br>
+            • And more!
           </div>
         </div>
       </div>
@@ -135,7 +164,7 @@
     <div class="container">
     </div> <!-- /container -->
 
-    <footer class="footer-contact">
+    <footer class="footer-contact-service">
       <p>&copy; LevelUpMarketing 2018</p>
     </footer>
     
