contact me to contact us

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     </nav>
 
     <div class="outside-wrapper-contact">
-      <h2>Contact me</h2>
+      <h2>Contact us</h2>
       <div class="container">
         <div class="text-center">
           <div class="text-left form">
