services photography content

--- a/services.html
+++ b/services.html
@@ -145,7 +145,7 @@
           </div>
         </div>
         <div class="photography col-lg-12">
-          <p class="col-lg-12 photo-title text-center">Specialized Photography</p>
+          <p class="col-lg-12 photo-title text-center">Specialized Photography & Copy Writing</p>
           <div class="photographyList col-lg-6 text-center">
             Pictures create perception, perception builds your brand. The keys to a strong picture, a stronger public perception, and a vibrant brand are emotions. Photographs and advertising design that elecit strong, fundamental recations in your potential customers will push your brand forward, regardless of industry.  We understand what images to use, what stories to tell, and what best will further your goals and reach your customers, both present and future.
           </div>
