--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@
             <p class="seo L1"> SEO Local <br> $300/month</p>
             <p class="seo-content">
               • Google Business Page<br><br>
-              • 3 Web pages being...<br><br>
+              • SEO that will incease your ranking and online presence to the local communities.  <br><br>
             </p>
           </div>
           <div class="service col-lg-4 text-center">
