--- a/services.html
+++ b/services.html
@@ -69,14 +69,14 @@
         </div>
       </div>
       <div class="facebookAd col-lg-12">
-        <div class="col-lg-4 service text-center">
+        <div class="col-lg-4 FBS service text-center">
           <p class="FB L1">Facebook Ads Level 1 <br> $250/month + your advertising budget.</p>
           <p class="FB-content text-left">
             • 1 Facebook ad campaign that specifically targets your demographic. <br><br>
             • Connect ad to a webpage/website of your choosing.
           </p>
         </div>
-        <div class="col-lg-4 service text-center">
+        <div class="col-lg-4 FBS service text-center">
           <p class="FB L2">Facebook Ads Level 2 <br> $500/month + your advertising budget.</p>
           <p class="FB-content text-left">
             • 2 Facebook ad campaigns that specifically targets your demographic. <br><br>
@@ -84,7 +84,7 @@
             • Landing Page designed for a specific promotion. <br><br>
           </p>
         </div>
-        <div class="col-lg-4 service text-center">
+        <div class="col-lg-4 FBS service text-center">
           <p class="FB L3">Facebook Ads Level 3 <br> $700/month + your advertising budget.</p>
           <p class="FB-content text-left">
             • 2 Facebook ad campaigns that specifically targets your demographic. <br><br>
@@ -93,23 +93,50 @@
             • Lead generation landing page.
           </p>
         </div>
-        <!-- <div class="seoLevels col-lg-12">
+        <div class="seoLevels col-lg-12">
           <div class="service col-lg-4 text-center">
-            <p class="seo L1"> SEO Local <br> $300/month</p>
-            <p class="seo-content">
+            <p class="seo L1"> SEO Local <br> $299/month</p>
+            <p class="seo-content text-left">
               • Google Business Page<br><br>
-              • SEO that will incease your ranking and online presence to the local communities.  <br><br>
+              • SEO that will incease your ranking and online presence to the local communities.<br><br>
+              • 5 keywords<br><br>
+              • 10 secondary keywords<br><br>
+              • Backlinking<br><br>
+              • Baseline local listing audit <br><br>
+              • Monthly Reporting<br><br>
+              • Ongoing account management<br><br>
+              
             </p>
           </div>
           <div class="service col-lg-4 text-center">
-            <p class="seo L2"> SEO Plus <br> $550/month</p>
-            <p class="seo-content"></p>
+            <p class="seo L2"> SEO Plus <br> $549/month</p>
+            <p class="seo-content text-left">
+              • Google Business Page<br><br>
+              • SEO that will incease your ranking and online presence to the regional communities.<br><br>
+              • 10 keywords<br><br>
+              • 20 secondary keywords<br><br>
+              • Backlinking<br><br>
+              • Baseline region listing audit <br><br>
+              • Monthly Reporting<br><br>
+              • Ongoing account management<br><br>
+              • NAP (Name, Address, Phone)<br><br>
+            </p>
           </div>
           <div class="service col-lg-4 text-center">
-            <p class="seo L3"> SEO National <br> $1000/month</p>
-            <p class="seo-content"></p>
+            <p class="seo L3"> SEO National <br> $999/month</p>
+            <p class="seo-content text-left">
+              • Google Business Page<br><br>
+              • SEO that will incease your ranking and online presence on a National Level.<br><br>
+              • 20 keywords at a National Level of Ranking<br><br>
+              • 30 secondary keywords at a National Level of Ranking<br><br>
+              • Backlinking at a National Level of Ranking<br><br>
+              • Baseline region listing audit at a National Level of Ranking <br><br>
+              • Monthly Reporting<br><br>
+              • Ongoing account management<br><br>
+              • NAP (Name, Address, Phone) at a National Level of Ranking<br><br>
+            </p>
           </div>
-        </div> -->
+        </div>
         <div class="webdevLevels col-lg-12">
           <div class="service col-lg-4 text-center">
             <p class="webdev L1"> Web Development Basic <br>/$750</p>
@@ -144,7 +171,7 @@
             </p>
           </div>
         </div>
-        <div class="photography col-lg-12">
+        <div class="photography service col-lg-12">
           <p class="col-lg-12 photo-title text-center">Specialized Photography & Copy Writing</p>
           <div class="photographyList col-lg-6 text-center">
             Pictures create perception, perception builds your brand. The keys to a strong picture, a stronger public perception, and a vibrant brand are emotions. Photographs and advertising design that elecit strong, fundamental recations in your potential customers will push your brand forward, regardless of industry.  We understand what images to use, what stories to tell, and what best will further your goals and reach your customers, both present and future.
