--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <br><br>
               28% of searches for something nearby result in a purchase. (Google) 
               <br><br>
-              Facebook influenced 52 per cent of consumers’ online and offline purchases (TheDrum)
+              Facebook influenced 52% of consumers’ online and offline purchases (TheDrum)
               <br><br>
                75% of male internet users are on Facebook as well as 83% of female internet users. (Wordstream)
                <br><br>
