--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="brand-container text-center">
-            <p class="brand">LevelUpMarketing</p>
+            <p class="brand">JSMediaMarketing</p>
             <p class="brand-title"><light>Marketing & Growth</light></p>
           </div>
 
